--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -56,12 +56,14 @@ input:focus {
     margin: 0;
     font-size: var(--text-form-size);
     color: var(--red);
+    font-weight: bold;
 }
 
 .no-active-error-message {
     margin: 0;
     font-size: var(--text-form-size);
     color: var(--red);
+    font-weight: bold;
 }
 
 .show-hide-button {
