--- a/src/components/MainNavBarSecretary/MainNavBarSecretary.css
+++ b/src/components/MainNavBarSecretary/MainNavBarSecretary.css
@@ -62,7 +62,8 @@ p {
 }
 
 .nav-option:hover {
-    background-color: var(--dark-color);
+    background-color: var(--white);
+    color: black;
 }
 
 .user-container {
