--- a/src/components/MainNavBarSecretary/MainNavBarSecretary.css
+++ b/src/components/MainNavBarSecretary/MainNavBarSecretary.css
@@ -66,6 +66,22 @@ p {
     color: black;
 }
 
+.access-container {
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.access-container p {
+    font-size: var(--nav-bar-text-size-info-system);
+    color: var(--white);
+    display: inline-block;
+    padding: 0;
+}
+
 .user-container {
     display: flex;
     flex-direction: column;
