--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@
   --title-small-size: 25px;
   --text-size: 20px;
   --text-form-size: 18px;
-  --nav-bar-text-size: 17px;
+  --nav-bar-text-size: 16px;
+  --nav-bar-text-size-info-system: 11px;
   --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
