Adding Modal Action performed Component

--- a/src/components/ModalActionPerformed/ModalActionPerformed.css
+++ b/src/components/ModalActionPerformed/ModalActionPerformed.css
@@ -8,3 +8,8 @@
     padding-inline: 20px;
     padding-block: 10px;
 }
+
+.cancel-modal-button {
+    padding-inline: 20px;
+    padding-block: 10px;
+}
