Add NavBarSecretary and Setting Windows Component

--- a/src/components/MainNavBarSecretary/MainNavBarSecretary.css
+++ b/src/components/MainNavBarSecretary/MainNavBarSecretary.css
@@ -68,18 +68,19 @@ p {
 
 .access-container {
     padding: 0px;
-    display: flex;
+    margin: 0px;
+    display: flow-root;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
+    justify-content: right;
+    align-items: left;
+    margin-top: 0px;
 }
 
 .access-container p {
     font-size: var(--nav-bar-text-size-info-system);
     color: var(--white);
     display: inline-block;
-    padding: 0;
+    padding: 0px;
 }
 
 .user-container {
