--- a/src/components/ModalActionPerformed/ModalActionPerformed.css
+++ b/src/components/ModalActionPerformed/ModalActionPerformed.css
@@ -10,9 +10,7 @@
 }
 
 .button-group {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: block;
 }
 
 .accept-modal-button {
@@ -23,5 +21,6 @@
 .cancel-modal-button {
     background-color: var(--red);
     padding-inline: 30px;
+    margin-left: 10px;
     padding-block: 10px;
 }
