--- a/src/components/MainNavBarSecretary/MainNavBarSecretary.css
+++ b/src/components/MainNavBarSecretary/MainNavBarSecretary.css
@@ -1,6 +1,6 @@
 .nav-bar {
     width: 15vw;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
