Modifying add property window and services

--- a/src/pages/Properties/AddPropertyWindow/AddPropertyWindow.css
+++ b/src/pages/Properties/AddPropertyWindow/AddPropertyWindow.css
@@ -44,6 +44,7 @@
     font-size: var(--text-form-size);
     padding-inline: 10px;
     padding-block: 5px;
+    text-align: center;
 }
 
 .property-dates-container {
